Correct spacing for logo

--- a/app/assets/stylesheets/layout/page/_homepage.scss
+++ b/app/assets/stylesheets/layout/page/_homepage.scss
@@ -1,7 +1,12 @@
 .l-home-header {
   position: relative;
-  margin-top: 30px;
-  margin-bottom: 20px;
+  margin-top: 19px;
+  margin-bottom: 21px;
+
+  @include media(tablet) {
+    margin-top: 30px;
+    margin-bottom: 28px;
+  }
 }
 
 .l-quick-links {
